# TimeAdventure

./: CMakeLists.txt  Time.sln
src/: Actions.cpp  Actions.h  CommandParser.cpp  CommandParser.h  Common.h  Flag.cpp  Flag.h  GameManager.cpp  GameManager.h  Npc.h  Player.cpp  Player.h  PrintHelper.cpp  PrintHelper.h  Room.cpp  Room.h  Time.vcxproj  Time.vcxproj.filters  main.cpp
src/Debug/: Time.exe.recipe  Time.ilk  Time.vcxproj.FileListAbsolute.txt  vc142.idb
src/Debug/Time.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Time.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/Items/: AddItem.cs  Inventory.cpp  Inventory.hpp  Item.cpp  Item.h  ItemData.cpp  ItemData.hpp
